# DMML2025

./: .gitignore  LOGITS_EXPLANATION.md  PRETRAINED_MODELS_INFO.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: crackforest_benchmark.yaml  voc_benchmark.yaml
scripts/: README_CRF_OPTIMIZATIONS.md  diagnose_dataloader_perf.py  download_crackforest.py  download_pretrained.py  evaluate_epoch_checkpoints.py  run_benchmark.py  test_crf_optimizations.py
src/segmentation_benchmark/: __init__.py
src/segmentation_benchmark/evaluation/: __init__.py  evaluator.py  registry.py
src/segmentation_benchmark/metrics/: __init__.py  metrics.py
src/segmentation_benchmark/models/: __init__.py  base.py  classical_crf.py  cnn.py  cnn_crf.py  crf_optimizations.md  crf_postprocess.py  diffusion.py  hybrid.py  transformer.py
src/segmentation_benchmark/utils/: __init__.py  checkpoint.py  config.py  paths.py  pretrained.py
tests/: test_data.py  test_metrics.py  test_registry.py
